[project]
name = "demo-testcontainers"
version = "0.1.0"
description = "Demo of testcontainers with docker python and postgres"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlmodel>=0.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "testcontainers>=3.7.1"
]
