[project]
name = "pycontainer-demo"
version = "0.1.0"
description = "Python containerization demo with PostgreSQL, testcontainers for integration testing, and GitHub Actions CI/CD"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlmodel>=0.0.22",
    "typer>=0.9.0",
    "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=2.15.0",
]
test = [
    "pytest>=7.4.3",
    "testcontainers>=3.7.1",
]

[project.scripts]
robot = "robot.cli:app"

[tool.pytest.ini_options]
markers = [
    "unit: unit test",
    "integration: integration test",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/robot"]
