[project]
name = "pycontainer-demo"
version = "0.1.0"
description = "Python containerization demo with PostgreSQL, testcontainers for integration testing, and GitHub Actions CI/CD"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlmodel>=0.0.22",
    "typer>=0.9.0",
    "psycopg2-binary>=2.9.9",
]

[dependency-groups]
dev = [
    "pre-commit>=2.15.0",
    "bump-my-version>=1.1.1",
    "pytest>=7.4.3",
    "testcontainers>=3.7.1",
    "docker>=7.1.0",
]

[project.scripts]
robot = "robot.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: unit test",
    "integration: integration test",
    "end_to_end: end-to-end test",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/robot"]

[tool.bumpversion]
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
tag_message = "Bump version: {current_version} → {new_version}"
commit = true
tag = true
sign_tags = false
tag_name = "v{new_version}"
allow_dirty = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
